2007-11-02  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add tests for SmartPtr, StringAlgo, Tribool and Tuple.
	* README: Mention the new libraries.
	* build-aux/boost.m4 (BOOST_SMART_PTR, BOOST_STRING_ALGO)
	(BOOST_TRIBOOL, BOOST_TUPLE): New.
	* tests/testsuite.at: Test the new macros.

2007-11-02  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix distcheck.
	* AUTHORS: New.
	* NEWS: New.
	* README: Mention the license and how to fetch the latest version.
	* build-aux/boost.m4: Mention how to fetch the latest version.
	* configure.ac (AM_INIT_AUTOMAKE): Drop `foreign'.
	* tests/Makefile.am ($(TESTSUITE)): Adjust dependencies to fix
	distcheck.

2007-11-02  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Properly find the pthreads flags for use with Boost.Thread.
	* build-aux/boost.m4 (_BOOST_PTHREAD_FLAG): New internal helper.
	(BOOST_THREADS): Use it.  Use the pthread flag during the tests for
	Boost.Thread.
	* tests/testsuite.at: Since the test for Boost.Thread is now more
	costly, do the cross-compilation test with Boost.Filesystem instead.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the testsuite to preserve the various arguments of configure.
	* build-aux/boost.m4 (BOOST_REQUIRE): Define
	DISTCHECK_CONFIGURE_FLAGS to automatically preserve the --with-boost
	argument.
	* configure.ac: Use AC_CANONICAL_HOST.
	(AC_CONFIG_FILES): Generate tests/package.m4.
	* tests/Makefile.am (EXTRA_DIST, $(TESTSUITE)): Adjust.
	No longer need to generate package.m4 since it's now generated from
	package.m4.in.
	* tests/atlocal.in (CXX, LD, CONFIGURE_FLAGS, build, host): New.
	* tests/package.m4.in: New.
	* tests/testsuite.at: Invoke configure with the proper flags (that
	is, preserve the original configuration).

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a README.
	* README: New.
	* build-aux/boost.m4: Advertise the Git repository.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the detection of the toolset name for GCC.