@@ -244,6 +244,12 @@ AT_CHECK_MACRO([BOOST_REQUIRE $var 0.0], [var=0.0; BOOST_REQUIRE([$var])])
 AT_CHECK_MACRO_CROSS([BOOST_REQUIRE $var 1.0], [var=1.0; BOOST_REQUIRE([$var])])
 AT_CHECK_MACRO([BOOST_REQUIRE $var 1.1.1], [var=1.1.1; BOOST_REQUIRE([$var])])
 
+AT_BANNER([Boost libraries])
+
+AT_CHECK_MACRO_CROSS([BOOST_FILESYSTEM])
+AT_CHECK_MACRO([BOOST_GRAPH])
+AT_CHECK_MACRO([BOOST_THREADS])
+
 AT_BANNER([Boost header-only libraries])
 
 AT_CHECK_MACRO([BOOST_CONVERSION])
@@ -255,9 +261,3 @@ AT_CHECK_MACRO([BOOST_STRING_ALGO])
 AT_CHECK_MACRO([BOOST_TRIBOOL])
 AT_CHECK_MACRO([BOOST_TUPLE])
 AT_CHECK_MACRO([BOOST_VARIANT])
-
-AT_BANNER([Boost libraries])
-
-AT_CHECK_MACRO_CROSS([BOOST_FILESYSTEM])
-AT_CHECK_MACRO([BOOST_GRAPH])
-AT_CHECK_MACRO([BOOST_THREADS])
