@@ -1,5 +1,11 @@
 2007-11-02  Benoit Sigoure  <tsuna@lrde.epita.fr>
 
+	Change the order of the tests.
+	* tests/testsuite.at: Do the tests that require linking first
+	(because they are more likely to fail).
+
+2007-11-02  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
 	Add tests for SmartPtr, StringAlgo, Tribool and Tuple.
 	* README: Mention the new libraries.
 	* build-aux/boost.m4 (BOOST_SMART_PTR, BOOST_STRING_ALGO)
